# ad_shadowmode

./: CMakeLists.txt  LICENSE  Makefile  README.md
ad_comm/: compile_env.sh  release.conf.json
ad_comm/ad_rscl/idl/: buf_comm_conf.proto  buf_comm_message.capnp  comm_conf.proto  component_conf.proto  cross_system_stat.capnp  cross_system_v3.capnp  cuda_message.capnp  cuda_message_conf.proto  dag_conf.proto  global_config.proto  hetero_channel_config.proto  hetero_channel_control.capnp  inmem_data_keeper.capnp  launch_param.proto  msgmeta.capnp  process_state.capnp  rscl_qos_profile.proto  runtime_param.proto  runtime_state.capnp  sensor.capnp  sm_conf.proto
ad_comm/ad_serde/idl/: message_schema.capnp
ad_comm/benchmark/scripts/: benchmark_had.sh  benchmark_honda.sh  benchmark_mdc.sh  benchmark_vdc.sh  benchmark_x86.sh
ad_comm/cmake/: RsclConfig.cmake  ad_bag-config.cmake  ad_base-config.cmake  ad_common-config.cmake  ad_diag-config.cmake  ad_log-config.cmake  ad_msg_bridge-config.cmake  ad_mw.cmake  ad_rscl-config.cmake  ad_time-config.cmake  ad_utils-config.cmake
ad_comm/example/: 10_mixed_pub  10_mixed_sub  1_example  1_example_sub  2_publisher  2_subscriber  4_pub  4_sub  5_service_discovery  6_cli  6_srv  7_pub_for_demo  7_topic_config_for_polyfillcore.yaml  timer.dag  topic_config.yaml
ad_comm/include/ad_bag/: bag_flags.h  bag_reader.h  bag_writer.h  exception.h  multibag_reader.h  random_access_helper.h
ad_comm/lib/: libad_task.so.1  libad_time.so.1  libad_utils.so.1  libfastcdr.so.1.0.25
ad_comm/resource_management/: README.md  install.sh  resourcectl  resourcectl_debug.py  resourcectl_service.py
ad_comm/test/: bag_v1.rsclbag  bag_v2.rsclbag  bag_v3.rsclbag  bridge.dag  bridge.yaml  input.json  need_to_recover.rsclbag  rsclparam.yaml  schedule.json  unittest_ad_log  unittest_ad_log.sh  unittest_ad_log_stderr  unittest_ad_param_rscl  unittest_ad_timead_time  unittest_bag_compactability_rscl  unittest_bag_header_ad_bag  unittest_bag_random_access_ad_bag  unittest_bag_reader_ad_bag_c  unittest_bag_rscl  unittest_bag_writer_ad_bag_c  unittest_basic_ops_ad_buf  unittest_buffer_reader_ad_bag  unittest_class_loader_ad_base  unittest_clip_saver_inmem  unittest_comm_adbuf_cuda_ipc_rscl  unittest_comm_adbuf_ipc_nvsci_rscl_nvsci  unittest_comm_adbuf_ipc_rscl  unittest_comm_adbuf_multi_ipc_nvsci_rscl_nvsci  unittest_comm_adbuf_rscl  unittest_comm_autosar_only_rscl  unittest_comm_cuda_allocator_rscl  unittest_comm_cuda_autosar_rscl  unittest_comm_cuda_ipc_multi_rscl  unittest_comm_cuda_ipc_rscl  unittest_comm_cuda_ipc_zero_copy_rscl  unittest_comm_cuda_rscl  unittest_comm_hetero_zmq_forward_rscl  unittest_comm_inet_clisrv_rscl  unittest_comm_ipc_rscl  unittest_comm_mw  (+86 more)
ad_msgs/: release.conf.json
cmake/cross_toolchains/: thor-toolchain-file.cmake  x86-toolchain-file.cmake
config/: app_config.json  default_strategy_config.json
dag/: ad_shadowmode.dag
docker/scripts/: dev_into.sh  dev_start.sh
resource/scripts/: setup.bash
resource/tar_extra/: release_helper.sh
src/: CMakeLists.txt  ShadowModeContext.cpp  ShadowModeContext.h  main.cpp
src/channel/: CMakeLists.txt  Observer.h  RsclChannelManager.cpp  RsclChannelManager.h
src/common/: CMakeLists.txt  base.h  data.h  environment.h  macros.h  macrosBase.h  ringBuffer.h
src/common/logger/: Logger.cpp  Logger.h
src/common/loggger/: Logger.cpp  LoggerCfg.h
src/common/time/: TimeSeriesBuffer.hpp  Timer.cpp  Timer.h
src/common/utils/: debouncer.cpp  debouncer.h  sRegex.cpp  sRegex.h  statusUtils.cpp  statusUtils.h  utils.cpp  utils.h
src/config/: AppConfig.cpp  AppConfig.h  CMakeLists.txt
src/data_encryption/: CMakeLists.txt  DataEncryption.cpp  DataEncryption.h
src/data_proto/: CMakeLists.txt  CurlWrapper.cc  CurlWrapper.h  MqttWrapper.cpp  MqttWrapper.h
src/data_storage/: CMakeLists.txt  DataStorage.cpp  DataStorage.h
src/data_storage/common/: FileCompress.cpp  FileCompress.h  FileRoller.cpp  FileRoller.h  StorageData.h
src/data_storage/cyber_recorder/: CyberRecorder.cpp  CyberRecorder.h
src/data_storage/rscl_recorder/: RsclRecorder.cpp  RsclRecorder.h
src/data_upload/: CMakeLists.txt  DataReporter.cpp  DataReporter.h  DataUploader.cc  DataUploader.h  FileSplitter.hpp  FileStatusManager.cc  FileStatusManager.h
src/strategy/: CMakeLists.txt  ConfigFileWatcher.hpp  StrategyConfig.h  StrategyParser.cpp  StrategyParser.h
src/trigger/: CMakeLists.txt
src/trigger/base/: TriggerBase.cpp  TriggerBase.h  TriggerFactory.hpp
src/trigger/common/: ExpressionParser.cpp  ExpressionParser.h  TriggerConditionChecker.cpp  TriggerConditionChecker.h
src/trigger/core/ai/: AILidarVisionCompTrigger.cpp  AILidarVisionCompTrigger.h  AIMsgBase.h  AIObjectTypeTrigger.cpp  AIObjectTypeTrigger.h  AISkipFrameTrigger.cpp  AISkipFrameTrigger.h  FrameCircleBuffer.h  HungarianOptimizer.h  SecureMatrix.h
src/trigger/core/rule/: ACCQuitTrigger.cpp  ACCQuitTrigger.h  AEBActiveTrigger.cpp  AEBActiveTrigger.h  AVPTakeoverTrigger.cpp  AVPTakeoverTrigger.h  CNOPQuitTrigger.cpp  CNOPQuitTrigger.h  CNOPTakeoverTrigger.cpp  CNOPTakeoverTrigger.h  CurveDynamicDetectionTrigger.cpp  CurveDynamicDetectionTrigger.h  DriveWheelSlipTrigger.cpp  DriveWheelSlipTrigger.h  EmergencyAccTrigger.cpp  EmergencyAccTrigger.h  EmergencyBrakingTrigger.cpp  EmergencyBrakingTrigger.h  EmergencyEvasionTrigger.cpp  EmergencyEvasionTrigger.h  FCTBActiveTrigger.cpp  FCTBActiveTrigger.h  FCWActiveTrigger.cpp  FCWActiveTrigger.h  HPATakeoverTrigger.cpp  HPATakeoverTrigger.h  MEBActiveTrigger.cpp  MEBActiveTrigger.h  RCTBActiveTrigger.cpp  RCTBActiveTrigger.h  SlopeDetectionTrigger.cpp  SlopeDetectionTrigger.h  SnakeDrivingDetectionTrigger.cpp  SnakeDrivingDetectionTrigger.h
src/trigger/core/shadow/: ShadowABModelTrigger.cpp  ShadowABModelTrigger.h  ShadowManCtlCompTrigger.cpp  ShadowManCtlCompTrigger.h  ShadowMsgBase.h
src/trigger/scheduler/: PriorityScheduler.cpp  PriorityScheduler.h  Scheduler.h  TaskQueue.h
src/unittest/: CMakeLists.txt  RsclPubExample.cpp  RsclPubExample.h  RsclSubExample.cpp  RsclSubExample.h
(+759 files in other folders)
